[gd_scene load_steps=33 format=2]

[ext_resource path="res://scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://scripts/interface/ScorePortal.gd" type="Script" id=3]
[ext_resource path="res://assets/bitshift.tres" type="Theme" id=4]
[ext_resource path="res://scenes/CRT.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ReleaseLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/vapor/vapor_bg_3.glb" type="PackedScene" id=8]
[ext_resource path="res://assets/vapor/vapor_bg_2.glb" type="PackedScene" id=9]
[ext_resource path="res://assets/vapor/vapor_bg_4.glb" type="PackedScene" id=10]
[ext_resource path="res://assets/vapor/vapor_bg_1.glb" type="PackedScene" id=11]
[ext_resource path="res://scripts/VaporCam.gd" type="Script" id=12]
[ext_resource path="res://assets/MatchupPro.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://scripts/interface/ExitPortal.gd" type="Script" id=15]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=9]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 14 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="ProceduralSky" id=10]
sky_top_color = Color( 1, 1, 1, 1 )
sky_horizon_color = Color( 1, 1, 1, 1 )
sky_energy = 0.75
ground_bottom_color = Color( 1, 1, 1, 1 )
ground_horizon_color = Color( 1, 1, 1, 1 )
ground_energy = 0.5
sun_color = Color( 0.980392, 0.196078, 0.27451, 1 )
sun_latitude = 0.0
sun_longitude = 180.0
sun_energy = 5.0

[sub_resource type="Environment" id=11]
background_mode = 2
background_sky = SubResource( 10 )
background_color = Color( 0.980392, 0.529412, 1, 1 )
fog_enabled = true
fog_color = Color( 0.764706, 0.509804, 0, 1 )
fog_sun_color = Color( 0.764706, 0.509804, 0, 1 )
fog_sun_amount = 0.25
fog_depth_begin = 50.0
fog_depth_end = 300.0
tonemap_mode = 2
ss_reflections_enabled = true
ss_reflections_fade_in = 0.35
dof_blur_far_enabled = true
dof_blur_far_distance = 40.0
dof_blur_far_amount = 0.05

[sub_resource type="DynamicFont" id=12]
size = 144
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 100
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=13]
size = 96
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 40
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Title1:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 64, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Title1:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 32, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Title2:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 296, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Title2:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 104, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=15]
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Title1:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 64, -0.25, 0, 0.25, 0, 64, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Title1:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -160, -0.25, 0, 0.25, 0, 32, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[sub_resource type="Animation" id=16]
tracks/0/type = "bezier"
tracks/0/path = NodePath("Title2:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 296, -0.25, 0, 0.25, 0, 296, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Title2:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 704, -0.25, 0, 0.25, 0, 104, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ColorRect:color:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=17]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "flash"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.7, 1, 3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.7, 1, 3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.7, 1, 3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.7, 1, 3 )
}

[sub_resource type="DynamicFont" id=21]
size = 96
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 20
font_data = ExtResource( 14 )

[node name="TitleScreen" type="Control"]
script = ExtResource( 1 )

[node name="ReleaseLabel" parent="." instance=ExtResource( 6 )]
visible = false

[node name="TitlePortal" type="Button" parent="."]
visible = false
margin_left = 512.0
margin_top = 448.0
margin_right = 768.0
margin_bottom = 513.0
theme = ExtResource( 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "START"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitPortal" type="Button" parent="."]
visible = false
margin_left = 576.0
margin_top = 496.0
margin_right = 704.0
margin_bottom = 528.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "EXIT GAME"
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VaporCam" type="Camera" parent="."]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, 0, 1, 0 )
script = ExtResource( 12 )

[node name="VaporSky" type="WorldEnvironment" parent="."]
environment = SubResource( 11 )

[node name="VaporScape" type="Spatial" parent="."]
visible = false

[node name="vapor_chunk_1" type="Spatial" parent="VaporScape"]

[node name="vapor_bg_1" parent="VaporScape/vapor_chunk_1" instance=ExtResource( 11 )]

[node name="vapor_bg_2" parent="VaporScape/vapor_chunk_1" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 20 )

[node name="vapor_bg_3" parent="VaporScape/vapor_chunk_1" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )

[node name="vapor_bg_4" parent="VaporScape/vapor_chunk_1" instance=ExtResource( 10 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 60 )

[node name="vapor_chunk_2" type="Spatial" parent="VaporScape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80 )

[node name="vapor_bg_1" parent="VaporScape/vapor_chunk_2" instance=ExtResource( 11 )]

[node name="vapor_bg_2" parent="VaporScape/vapor_chunk_2" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 20 )

[node name="vapor_bg_3" parent="VaporScape/vapor_chunk_2" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )

[node name="vapor_bg_4" parent="VaporScape/vapor_chunk_2" instance=ExtResource( 10 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 60 )

[node name="vapor_chunk_3" type="Spatial" parent="VaporScape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 160 )

[node name="vapor_bg_1" parent="VaporScape/vapor_chunk_3" instance=ExtResource( 11 )]

[node name="vapor_bg_2" parent="VaporScape/vapor_chunk_3" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 20 )

[node name="vapor_bg_3" parent="VaporScape/vapor_chunk_3" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )

[node name="vapor_bg_4" parent="VaporScape/vapor_chunk_3" instance=ExtResource( 10 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 60 )

[node name="vapor_chunk_4" type="Spatial" parent="VaporScape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 240 )

[node name="vapor_bg_1" parent="VaporScape/vapor_chunk_4" instance=ExtResource( 11 )]

[node name="vapor_bg_2" parent="VaporScape/vapor_chunk_4" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 20 )

[node name="vapor_bg_3" parent="VaporScape/vapor_chunk_4" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )

[node name="vapor_bg_4" parent="VaporScape/vapor_chunk_4" instance=ExtResource( 10 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 60 )

[node name="Title1" type="Label" parent="."]
margin_left = 64.0
margin_top = -160.0
margin_right = 1214.0
margin_bottom = -32.0001
custom_fonts/font = SubResource( 12 )
text = "BITSHIFT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" type="Label" parent="."]
margin_left = 296.0
margin_top = 704.0
margin_right = 982.0
margin_bottom = 832.0
custom_fonts/font = SubResource( 13 )
text = "OVERDRIVE"
align = 1
valign = 1

[node name="TitleAnim" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 19 )
anims/Title1 = SubResource( 15 )
anims/Title2 = SubResource( 16 )

[node name="FadeAnim" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 20 )
anims/fade_in = SubResource( 17 )
anims/flash = SubResource( 18 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
color = Color( 0.5, 0.5, 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlphaTitle" type="Label" parent="."]
visible = false
margin_top = 554.0
margin_right = 1280.0
margin_bottom = 682.0
custom_fonts/font = SubResource( 21 )
text = "ALPHA 0.3.0"
align = 1
valign = 1

[node name="CRT" parent="." instance=ExtResource( 5 )]

[connection signal="mouse_entered" from="TitlePortal" to="TitlePortal" method="_on_ScorePortal_mouse_entered"]
[connection signal="pressed" from="TitlePortal" to="TitlePortal" method="_on_ScorePortal_pressed"]
[connection signal="mouse_entered" from="ExitPortal" to="ExitPortal" method="_on_ExitPortal_mouse_entered"]
[connection signal="pressed" from="ExitPortal" to="ExitPortal" method="_on_ExitPortal_pressed"]
[connection signal="animation_finished" from="TitleAnim" to="." method="_on_TitleAnim_animation_finished"]
[connection signal="animation_finished" from="FadeAnim" to="." method="_on_FadeAnim_animation_finished"]
